ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Pass adapters to the datamodel, not schemas. FlexibleTypeInformation : getDataModel()