@@ -3,7 +3,7 @@
                    validate python: request.has_key('cpsdocument_create_button');
                    res python: ti.renderCreateObjectDetailed(
                      container=here, request=request,
-                     validate=validate, mode='create',
+                     validate=validate, layout_mode='create',
                      create_callback='cpsdocument_create',
                      created_callback='cpsdocument_created');
                    global rendered_main python: res[0];
